# my-ansible-k8s-sample

./: pyproject.toml
playbooks/: create-namespace.yaml
tests/: test_my_ansible_k8s_sample.py
