[tool.poetry]
name = "my-ansible-k8s-sample"
version = "0.1.0"
description = ""
authors = ["t_ishikawa <tissi0708@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
openshift = "^0.12.1"
ansible = "^5.0.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
